CalculMental -> tests 2..5 i codi.